# Pavement_Scanning_Cam_Array

./: .gitignore  12_17_test.py  Broadcast_GPS.py  Ext_Kalman_filter.py  Ext_Kalman_filter_test_ver.py  File_rename.py  GPS_accuracy.py  IMU_stonemill_test.csv  IMU_to_csv.py  README.md  Real_Time_Mosaic_Parser.py  Run_Post_processing.py  TimeTest_receiver.py  blkfly.py  blkfly2.py  blkfly_md.py  blkfly_md435.py  blkfly_rawbytes.py  cam_array_post_processing.py  fusing_required.md  gps_analysis.py  gps_converter.py  gps_filter_validation1.csv  gps_filter_validation2.csv  gps_filter_validation3.csv  gps_filter_validation4.csv  gps_socket.py  image_gps_plots.py  remote_display_raw_bytes.py  remote_display_with_dummygps.py  remote_display_with_dummygps_md.py  remote_display_with_exif.py
Data_logs/: position_log.csv  position_log_04_15_1.csv  position_log_04_15_2.csv  position_log_04_15_3.csv
ESP_read_MIP/main_MIP_read/: CMakeLists.txt  README.md  sdkconfig.old
ESP_read_MIP/main_MIP_read/components/mip_sdk/: CMakeLists.txt
GPS_to_IMU_MIP/: README.md  mip_usb_test.csv  platformio.ini  record_mip.ps1  record_mip.py
GPS_to_IMU_MIP/src/: main.cpp
IMU_EKF/: .gitignore  3DM-CV7-INS_6291.228332_20260604T180712Z.json  3DM-CV7-INS_6291.228332_20260616T203054Z.json  3DM-CV7-INS_6291.228332_20260616T204052Z.json  CV7_INS_EKF.py  CV7_config_aiding.py  CV7_plot_ekf_gps.py  CV7_read_nmea.md  CV7_read_nmea.py  README.en.md  README.md  README.zh-CN.md  cv7_gui_telemetry.py  gps_config.md  offline_ekf_spyder.py  parse_sensorconnect_bin_plot.py  plot_latest_csv_comparison_spyder.py  prepare_cv7_factor_graph_input.py  run_latest_cv7_factor_graph_spyder.py
IMU_EKF/pangolin_viewer/: CMakeLists.txt  README.md
IMU_EKF/pangolin_viewer/release/windows-x64/: README.txt
IMU_EKF/pangolin_viewer/src/: main.cpp
MIP_SDK_version/verify_tools/: CMakeLists.txt  record_mip.ps1  verify_mip_updated.cpp
log_gps/: Drone check list.xlsx  XBee_mosaicH_RTK_setup_guide_CN.md  XBee_mosaicH_RTK_setup_guide_EN.md  gps_tcp_server_host.py  wireless_gps_logger.py
main/: hello_world_main.c
pavement_analysis/: analyze_defect_depth.py
test_code/: EKF_first_version.py  GPS_anchored_dead_reckoning.py  IMU_only.csv  diagnisitic_IMU.py  ekf_gps_imu_janudis_debug.py  gps_raw.csv  plot_EKF.py  plot_GPS_anchored_dead_reckoning.py  plot_gps.py  position.csv  position_1.csv  position_2.csv  position_3.csv  position_test_1.csv  quaternionData.csv  rawData.csv  test_Ext_Kalman_filter.py  test_IMU_GPS.py  test_IMU_GPS_alex.py  test_IMU_GPS_version_2.py  test_IMU_GPS_version_2_codex.py  test_IMU_GPS_version_2_keep.py  test_IMU_GPS_working_version_1.py  test_imu_reading.py  test_integrate_IMU_GPS.py  test_validate_GPS.py  untitled0.py
(+105 files in other folders)
